<package>
  <name>cob_android_resource_server</name>
  <version>0.1.0</version>
  <description>cob_android_resource_server</description>
  
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_android_resource_server</url>

  <maintainer email="bnm@ipa.fhg.de">Benjamin Maidel</maintainer>
  <author email="bnm@ipa.fhg.de">Benjamin Maidel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>
</package>
