<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>cob_android_resource_server</name>
  <version>0.1.10</version>
  <description>cob_android_resource_server</description>
  
  <license>Apache 2.0</license>

  <url type="website">http://ros.org/wiki/cob_android_resource_server</url>

  <maintainer email="bnm@ipa.fhg.de">Benjamin Maidel</maintainer>
  <author email="bnm@ipa.fhg.de">Benjamin Maidel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 2">python-setuptools</buildtool_depend>
  <buildtool_depend condition="$ROS_PYTHON_VERSION == 3">python3-setuptools</buildtool_depend>

  <exec_depend>rospy</exec_depend>
</package>
