<package>
  <name>cob_android_script_server</name>
  <version>0.1.0</version>
  <description>cob_android_script_server</description>
  
  <license>LGPL</license>

  <url type="website">http://ros.org/wiki/cob_android_script_server</url>

  <maintainer email="bnm@ipa.fhg.de">Benjamin Maidel</maintainer>
  <author email="bnm@ipa.fhg.de">Benjamin Maidel</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>rospy</run_depend>
  <run_depend>cob_android_msgs</run_depend>

  <export>
  </export>
</package>
